Source/WebKit/WebProcess/WebPage/WebPage.h
@@ -1430,6 +1430,7 @@ public:
 #if ENABLE(APP_HIGHLIGHTS)
     WebCore::CreateNewGroupForHighlight highlightIsNewGroup() const { return m_highlightIsNewGroup; }
     WebCore::HighlightRequestOriginatedInApp highlightRequestOriginatedInApp() const { return m_highlightRequestOriginatedInApp; }
+    WebCore::HighlightVisibility appHighlightsVisiblility() const { return m_appHighlightsVisible; }
 
     bool createAppHighlightInSelectedRange(WebCore::CreateNewGroupForHighlight, WebCore::HighlightRequestOriginatedInApp);
     void restoreAppHighlightsAndScrollToIndex(const Vector<SharedMemory::IPCHandle>&&, const std::optional<unsigned> index);
@@ -2351,6 +2352,10 @@ private:
 
 #if ENABLE(WEBXR) && PLATFORM(COCOA)
     std::unique_ptr<PlatformXRSystemProxy> m_xrSystemProxy;
+#endif
+    
+#if ENABLE(APP_HIGHLIGHTS)
+    WebCore::HighlightVisibility m_appHighlightsVisible { false };
 #endif
 };
 
